# dofbot_sci_ws

./: .gitignore  README.md
dofbot_control/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
dofbot_control/config/: dofbot_control.yaml  joint_state_controller.yaml
dofbot_control/doc/: 真机调试计划单.md
dofbot_control/include/dofbot_control/: dofbot_hw_interface.h  dofbot_sim_interface.h
dofbot_control/launch/: camera.launch  dofbot_hw.launch  dofbot_sim.launch  dofbot_waypoint.launch  mujoco_sim.launch
dofbot_control/scripts/: mujoco_sim_node.py  waypoint_executor.py
dofbot_control/src/: dofbot_hw_interface.cpp  dofbot_hw_node.cpp  dofbot_sim_interface.cpp
dofbot_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
dofbot_description/doc/: README.md
dofbot_description/doc/hardware/: camera.md  hardware_quick_reference.xlsx
dofbot_description/doc/protocol/: i2c_register_map.xlsx  pc_app_protocol.xlsx
dofbot_description/launch/: display.launch
dofbot_description/meshes/collision/: base_link_col_1.stl  base_link_col_2.stl  base_link_col_3.stl  flange_col_1.stl  flange_col_2.stl  left_finger_col_1.stl  left_finger_col_2.stl  left_finger_col_3.stl  link1_col.stl  link2_col.stl  link2_col_1.stl  link2_col_2.stl  link3_col.stl  link3_col_1.stl  link3_col_2.stl  link4_col_1.stl  link4_col_2.stl  link4_col_3.stl  right_finger_col_1.stl  right_finger_col_2.stl  right_finger_col_3.stl
dofbot_description/meshes/source_files/: left_finger_collision.blend
dofbot_description/meshes/visual/: left_finger.stl  right_finger.stl
dofbot_description/mjcf/: dofbot_mjcf.xml
dofbot_description/rviz/: urdf.rviz
dofbot_description/urdf/: dofbot.urdf  dofbot.xacro
dofbot_description/urdf/deprecated/: README.md  dofbot.urdf  dofbot_orgin.urdf
dofbot_kinematics/: CHANGELOG.rst  CMakeLists.txt  README.md  dofbot_ik_plugin.xml  package.xml
dofbot_kinematics/src/: dofbot_ik_plugin.cpp
dofbot_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
dofbot_moveit_config/config/: cartesian_limits.yaml  dofbot.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_mujoco.rviz  ompl_planning.yaml  ros_controllers.yaml  ros_controllers_waypoint.yaml  sensors_3d.yaml
dofbot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_mujoco.launch  dofbot_moveit_controller_manager.launch.xml  dofbot_moveit_sensor_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  pilz_industrial_motion_planner_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  warehouse_settings.launch.xml
dofbot_moveit_config_backup/: .setup_assistant
dofbot_moveit_config_backup/config/: ros_controllers.yaml
dofbot_moveit_config_backup/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  planning_pipeline.launch.xml  setup_assistant.launch  warehouse.launch
dofbot_mujoco/: CMakeLists.txt  package.xml
dofbot_mujoco/launch/: mujoco_sim.launch
dofbot_mujoco/scripts/: mujoco_sim_node.py
