<?xml version="1.0"?>
<package format="3">
  <name>dofbot_control</name>
  <version>0.1.0</version>
  <description>ros_control hardware interfaces for the DOFBOT 5-DOF arm (I2C physical + MuJoCo simulation)</description>

  <maintainer email="3954058022@qq.com">Tu Zhichao</maintainer>
  <author email="3954058022@qq.com">Tu Zhichao</author>

  <license>Apache-2.0</license>

  <url type="repository">https://github.com/Practitioner108/dofbot_sci_ws</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>joint_limits_interface</depend>
  <depend>urdf</depend>
  <depend>rospy</depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>python3-smbus</exec_depend>

  <export>
  </export>
</package>
