<?xml version="1.0"?>
<package format="3">
  <name>dofbot_description</name>
  <version>0.1.0</version>
  <description>5-DOF desktop robotic arm with gripper — URDF description and meshes</description>

  <maintainer email="3954058022@qq.com">Tu Zhichao</maintainer>
  <author email="3954058022@qq.com">Tu Zhichao</author>

  <license>Apache-2.0</license>

  <url type="repository">https://github.com/Practitioner108/dofbot_sci_ws</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
