<?xml version="1.0"?>
<package format="3">
  <name>dofbot_kinematics</name>
  <version>0.1.0</version>
  <description>Analytic inverse kinematics plugin for the DOFBOT 5-DOF robotic arm</description>

  <maintainer email="3954058022@qq.com">Tu Zhichao</maintainer>
  <author email="3954058022@qq.com">Tu Zhichao</author>

  <license>Apache-2.0</license>

  <url type="repository">https://github.com/Practitioner108/dofbot_sci_ws</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>pluginlib</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>libeigen-dev</build_depend>

  <export>
    <moveit_core plugin="${prefix}/dofbot_ik_plugin.xml"/>
  </export>
</package>
