<?xml version="1.0"?>
<package format="3">
  <name>dofbot_moveit_config</name>
  <version>0.3.0</version>
  <description>
    MoveIt configuration for the DOFBOT 5-DOF desktop robotic arm, including launch files,
    planners, kinematics, joint limits, and RViz configuration.
  </description>

  <maintainer email="3954058022@qq.com">Tu Zhichao</maintainer>
  <author email="3954058022@qq.com">Tu Zhichao</author>

  <license>Apache-2.0</license>

  <url type="repository">https://github.com/Practitioner108/dofbot_sci_ws</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>chomp_motion_planner</exec_depend>
  <exec_depend>pilz_industrial_motion_planner</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>moveit_ros_benchmarks</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>warehouse_ros_mongo</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>dofbot_description</exec_depend>
  <exec_depend>dofbot_kinematics</exec_depend>
  <exec_depend>dofbot_control</exec_depend>

  <export>
  </export>
</package>
